fix layout to look better on mobile

--- a/style.css
+++ b/style.css
@@ -34,17 +34,37 @@ div.content {
 	padding: 10px;
 }
 
-iframe {
+img {
+	float: left;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	width: 95%;
+	max-width: 420;
+}
+
+#inner iframe {
+	position: absolute;
+	width: 95%;
+	height: 95%;
+	top: 0;
+	bottom: 0;
+}
+
+#outer {
 	float: left;
 	margin: 0 auto;
 	display: block;
 	padding-left: 10px;
 	padding-right: 10px;
+	width: 420px;
+	height: 244px;
 	max-width: 100%;
+	max-height: 100%;
 }
 
-img {
-	float: left;
-	padding-left: 10px;
-	padding-right: 10px;
+#inner {
+	position: relative;
+	height: 0px;
+	padding-bottom: 56.25%;
 }
